# FLstudioAMCP

./: .gitignore  LICENSE.txt  NirithyCore.pyscript  README.md  deploy.bat  device_NirithyCore.py  pyproject.toml
src/FLStudioAMCP/: server.py
src/FLStudioAMCP/tools/: __init__.py  channels.py  mixer.py  piano_roll.py  plugins.py  registry.py  system.py  transport.py
src/FLStudioAMCP/utils/: __init__.py  connection.py  fl_trigger.py  midi_connection.py
